--- a/package.json
+++ b/package.json
@@ -268,6 +268,13 @@
   },
   "browserslist": [],
   "prettier": {
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "avoid",
+    "semi": false,
+    "tabWidth": 4,
     "overrides": [
       {
         "files": [
@@ -279,8 +286,7 @@
           "parser": "json"
         }
       }
-    ],
-    "singleQuote": true
+    ]
   },
   "renovate": {
     "extends": [
